--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -140,7 +140,8 @@ Adriana Hernandez-Perez and Marc Ivaldi</span>, CEPR DP 5990<span
 <span style="font-family: Calibri;"></span>
 <ul style="font-family: Calibri;">
 </ul>
-<span style="font-weight: bold; font-family: Calibri;">Other work:</span><span
+<span style="font-family: Calibri;"><span style="font-weight: bold;">W</span></span><span
+ style="font-weight: bold; font-family: Calibri;">ork in progress:</span><span
  style="font-family: Calibri;"> <br>
 <br>
 &nbsp;&nbsp;&nbsp; "Consumer Demand with
