--- a/other.htm
+++ b/other.htm
@@ -276,9 +276,20 @@ Conferences</a></h3>
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Toulouse School of Economics,
+Competition Policy Seminar, February 5, 2021<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;" lang="EN-US"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;" lang="EN-US"></span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of California, Irvine,
 March 1, 2021<br>
-</span><span style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+</span><span style="font-family: Calibri;" lang="EN-US"></span><span
+ style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of
 Massachusetts, Amherst, April 9, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
@@ -306,7 +317,7 @@ Economics Seminar October 8, 2020<br>
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - University of North Carolina, Chapel Hill,
 IO Virtual Seminar, September 30, 2020<br>
-<o:p></o:p></span>&nbsp;<span style="font-family: &quot;Calibri&quot;,sans-serif;"
+<o:p></o:p></span><span style="font-family: &quot;Calibri&quot;,sans-serif;"
  lang="EN-US"></span><span style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;-</span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style=""></span></span><span
