--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -143,10 +143,11 @@ Adriana Hernandez-Perez and Marc Ivaldi</span>, CEPR DP 5990<span
 <span style="font-family: Calibri;"><span style="font-weight: bold;">W</span></span><span
  style="font-weight: bold; font-family: Calibri;">ork in progress:</span><span
  style="font-family: Calibri;"> <br>
-<br>
-&nbsp;&nbsp;&nbsp; "Consumer Demand with
-Unobserved Stockpiling and Intertemporal
-Price Discrimination" with Thierry Magnac <br>
+</span><span
+ style="color: rgb(33, 33, 33); font-family: Bitter; font-size: 14.6667px; font-style: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; widows: 2; word-spacing: 0px; display: inline ! important; float: none;"><br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;
+&nbsp;"Strategic Submissions: A Cross-Country Analysis of Supplemental
+Drug Approvals" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 <br>
 &nbsp;&nbsp;&nbsp; "Intrahousehold
 Risk Sharing, Incentives and Nutrition:
