--- a/Publications.htm
+++ b/Publications.htm
@@ -45,11 +45,13 @@ publications:</i></big></p>
  href="../../../ADMINIST/web/pierredubois.github.io/dls.pdf"
  target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
 Income Countries</a>" with&nbsp;Yassine Lefouili and St&eacute;phane
-Straub,</span> </span><span style="font-family: Calibri;">forthcoming <span
+Straub,</span>&nbsp;</span><span style="font-family: Calibri;"><span
  style="font-style: italic; font-weight: bold;">European</span></span><span
  style="font-style: italic; font-family: Calibri;"><span
  style="font-weight: bold;">
-Economic Review</span><br>
+Economic Review</span></span><span style="font-family: Calibri;"><span
+ style="font-weight: bold;"></span>, 2021, 132</span><span
+ style="font-style: italic; font-family: Calibri;"><br>
 <br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 "<a style="color: rgb(0, 0, 0); text-decoration: none;"
