--- a/Publications.htm
+++ b/Publications.htm
@@ -41,8 +41,7 @@ publications:</i></big></p>
  style="font-family: Calibri;"> <br>
 </span><span style="font-family: Calibri;"><span lang="EN-US"><br>
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;
-"<a style="color: rgb(0, 0, 0); text-decoration: none;"
- href="../../../ADMINIST/web/pierredubois.github.io/dls.pdf"
+"<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dls.pdf"
  target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
 Income Countries</a>" with&nbsp;Yassine Lefouili and St&eacute;phane
 Straub,</span>&nbsp;</span><span style="font-family: Calibri;"><span
