--- a/other.htm
+++ b/other.htm
@@ -275,10 +275,10 @@ Conferences</a></h3>
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;</span><span
- style="font-family: Calibri;">&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of California, Irvine,
-March 1, 2021<br>
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp; - Econometrics Workshop,
+Toulouse School of Economics, March 9, 2021<br>
 </span><span style="font-family: Calibri;" lang="EN-US"></span><span
  style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of
@@ -296,7 +296,11 @@ Past :
 </span>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+ style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of California, Irvine,
+March 1, 2021<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Toulouse School of Economics,
 Competition Policy Seminar, February 5, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
