--- a/other.htm
+++ b/other.htm
@@ -276,10 +276,7 @@ Conferences</a></h3>
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp; - Econometrics Workshop,
-Toulouse School of Economics, March 9, 2021<br>
-</span><span style="font-family: Calibri;" lang="EN-US"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of
 Massachusetts, Amherst, April 9, 2021<br>
@@ -294,8 +291,22 @@ on Health Economics, MIT Cambridge,&nbsp;November 12, 2020 (postponed
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;
 Past :
 </span>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.<span
+ style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><!--[endif]--><span
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"> &nbsp; &nbsp; &nbsp;
+&nbsp; &nbsp; - Policy
+Evaluation Network, Virtual Workshop, Helmholtz Zentrum M&uuml;nchen,
+March 26, 2021<o:p></o:p></span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp; - Econometrics Workshop,
+Toulouse School of Economics, March 9, 2021<br>
+</span><span style="font-family: Calibri;" lang="EN-US"></span><span
+ style="font-family: Calibri;" lang="EN-US"></span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of California, Irvine,
