--- a/Publications.htm
+++ b/Publications.htm
@@ -39,7 +39,19 @@ publications:</i></big></p>
 </ul>
 <big><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span></big><span
  style="font-family: Calibri;"> <br>
-</span><span style="font-family: Calibri;"><span lang="EN-US"><br>
+</span><span style="font-family: Calibri;">&nbsp; &nbsp; "<a
+ style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="../../../ADMINIST/web/pierredubois.github.io/duboistuncelmarch2021.pdf"
+ target="_blank">Identifying
+the Effects
+of
+Scientific Information and Recommendations on Physicians Prescribing
+Behavior</a>" with Tuba
+Tun&ccedil;el, conditionally accepted at<span style="font-weight: bold;">
+</span><span style="font-style: italic;"><span
+ style="font-weight: bold;">Journal
+of Health Economics</span><br>
+<br>
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;
 "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dls.pdf"
  target="_blank">Pooled Procurement of Drugs&nbsp;in Low and Middle
