--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -36,17 +36,8 @@ papers:</i></p>
 Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
 Gandhi
 and Shoshana Vasserman<br>
-</span></span><span style="font-style: italic; font-family: Calibri;"><br>
-</span><span style="font-family: Calibri;">&nbsp; &nbsp; "<a
- style="text-decoration: none; color: rgb(0, 0, 0);"
- href="duboistuncelmarch2021.pdf" target="_blank">Identifying
-the Effects
-of
-Scientific Information and Recommendations on Physicians Prescribing
-Behavior</a>" with Tuba
-Tun&ccedil;el, revise and resubmit at <span style="font-style: italic;">Journal
-of Health Economics</span></span><br>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp; <br>
+</span></span><span style="font-style: italic; font-family: Calibri;"></span><span
+ style="font-family: Calibri;"><br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;" href="dp.pdf"
  target="_blank">Price
@@ -122,10 +113,11 @@ Statistics</i><br style="font-family: Calibri;">
  href="risk_het.pdf" target="_blank">Heterogeneity
 of Preferences, Limited Commitment and Coalitions: Empirical Evidence
 on the Limits to Risk Sharing in Rural Pakistan</a><span
- style="font-family: Calibri;">" CEPR DP 6004<span lang="EN-US"><br>
-<br>
-<br>
-<span style="font-weight: bold;">Permanent Working Papers:<br>
+ style="font-family: Calibri;">" CEPR DP 6004<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; <br>
+</span><br>
+<span style="font-family: Calibri;"><span lang="EN-US"><span
+ style="font-weight: bold;">Permanent Working Papers:<br>
 <br style="font-weight: bold;">
 </span></span></span><span style="font-family: Calibri;"><span
  class="style1style2style9" lang="EN-GB">&nbsp;&nbsp;&nbsp; &ldquo;</span><span
@@ -145,7 +137,12 @@ Adriana Hernandez-Perez and Marc Ivaldi</span>, CEPR DP 5990<span
  style="font-family: Calibri;"> <br>
 </span><span
  style="color: rgb(33, 33, 33); font-family: Bitter; font-size: 14.6667px; font-style: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; widows: 2; word-spacing: 0px; display: inline ! important; float: none;"><br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;
+</span><span style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;"Soda
+Taxes and Dynamic Advertising", with Rossi Abi-Rafeh, Rachel Griffith
+and Martin O'Connell<br>
+<br>
+<span lang="EN-US">
+</span></span><span style="font-family: Calibri;">&nbsp;&nbsp;
 &nbsp;"Strategic Submissions: A Cross-Country Analysis of Supplemental
 Drug Approvals" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 <br>
