--- a/Publications.htm
+++ b/Publications.htm
@@ -47,7 +47,7 @@ the Effects
 of
 Scientific Information and Recommendations on Physicians Prescribing
 Behavior</a>" with Tuba
-Tun&ccedil;el, conditionally accepted at<span style="font-weight: bold;">
+Tun&ccedil;el, fothcoming at<span style="font-weight: bold;">
 </span><span style="font-style: italic;"><span
  style="font-weight: bold;">Journal
 of Health Economics</span><br>
