--- a/Publications.htm
+++ b/Publications.htm
@@ -41,8 +41,7 @@ publications:</i></big></p>
  style="font-family: Calibri;"> <br>
 </span><span style="font-family: Calibri;">&nbsp; &nbsp; "<a
  style="text-decoration: none; color: rgb(0, 0, 0);"
- href="../../../ADMINIST/web/pierredubois.github.io/duboistuncelmarch2021.pdf"
- target="_blank">Identifying
+ href="duboistuncelmarch2021.pdf" target="_blank">Identifying
 the Effects
 of
 Scientific Information and Recommendations on Physicians Prescribing
