--- a/other.htm
+++ b/other.htm
@@ -268,36 +268,29 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;" lang="EN-US"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;" lang="EN-US"></span><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- University of
-Massachusetts, Amherst, April 9, 2021<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CREST Paris, May 5, 2021<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - American Society of
+Health Economics conference, June 21, 2021</span><span
+ style="font-family: Calibri;"><br>
 </span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;- MIT-TSE Conference
-on Health Economics, MIT Cambridge,&nbsp;November 12, 2020 (postponed
-2021)<br>
-</span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;
-Past :
+ style="font-family: Calibri;">Past :
 </span>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.<span
- style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><!--[endif]--><span
- style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"> &nbsp; &nbsp; &nbsp;
-&nbsp; &nbsp; - Policy
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span><span
+ style="font-family: Calibri;" lang="EN-US">- University of
+Massachusetts, Amherst, April 9, 2021</span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; </span><span style="font-family: Calibri;"></span><span
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">- Policy
 Evaluation Network, Virtual Workshop, Helmholtz Zentrum M&uuml;nchen,
 March 26, 2021<o:p></o:p></span></p>
 <p
