--- a/Publications.htm
+++ b/Publications.htm
@@ -60,7 +60,7 @@ Straub,</span>&nbsp;</span><span style="font-family: Calibri;"><span
  style="font-style: italic; font-family: Calibri;"><span
  style="font-weight: bold;">
 Economic Review</span></span><span style="font-family: Calibri;"><span
- style="font-weight: bold;"></span>, 2021, 132</span><span
+ style="font-weight: bold;"></span>, 2021, 132, 103655</span><span
  style="font-style: italic; font-family: Calibri;"><br>
 <br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
