--- a/Publications.htm
+++ b/Publications.htm
@@ -46,10 +46,10 @@ the Effects
 of
 Scientific Information and Recommendations on Physicians Prescribing
 Behavior</a>" with Tuba
-Tun&ccedil;el, fothcoming at<span style="font-weight: bold;">
-</span><span style="font-style: italic;"><span
+Tun&ccedil;el,&nbsp;<span style="font-style: italic;"><span
  style="font-weight: bold;">Journal
-of Health Economics</span><br>
+of Health Economics</span></span><span style="font-weight: bold;"></span>,
+April 2021, 102461<span style="font-style: italic;"><br>
 <br>
 </span></span><span style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;
 "<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dls.pdf"
