--- a/other.htm
+++ b/other.htm
@@ -268,12 +268,16 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CREST Paris, May 5, 2021<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - American Society of
-Health Economics conference, June 21, 2021</span><span
- style="font-family: Calibri;"><br>
-</span><span style="font-family: Calibri;"></span><span
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - American Society of
+Health Economics conference, June 21, 2021<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - IO seminar, Wharton, University of
+Pennsylvania, November 17, 2021<br>
+</span><br>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">Past :
 </span>
 <p class="MsoNormal"
@@ -283,6 +287,9 @@ Health Economics conference, June 21, 2021</span><span
 </span></span></span><!--[endif]--><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span><span
+ style="font-family: Calibri;">- CREST Paris, May 5, 2021<br>
+</span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;" lang="EN-US">- University of
 Massachusetts, Amherst, April 9, 2021</span></p>
 <p class="MsoNormal"
