--- a/other.htm
+++ b/other.htm
@@ -273,6 +273,8 @@ Conferences</a></h3>
 &nbsp;&nbsp;&nbsp; &nbsp; - American Society of
 Health Economics conference, June 21, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO seminar, Wharton, University of
 Pennsylvania, November 17, 2021<br>
 </span><br>
