--- a/other.htm
+++ b/other.htm
@@ -274,10 +274,11 @@ Conferences</a></h3>
 Health Economics conference, June 21, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Universit&eacute;
+Pharmaceutiques, Paris, September 24, 2021 <br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO seminar, Wharton, University of
-Pennsylvania, November 17, 2021<br>
-</span><br>
+Pennsylvania, November 17, 2021</span><br>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">Past :
@@ -288,8 +289,14 @@ Pennsylvania, November 17, 2021<br>
  style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><!--[endif]--><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;</span><span
- style="font-family: Calibri;">- CREST Paris, May 5, 2021<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;- TSE Common Good Summit, May 28,
+2021</span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;</span><span style="font-family: Calibri;">-
+CREST Paris, May 5, 2021<br>
 </span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 &nbsp; <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;" lang="EN-US">- University of
