--- a/other.htm
+++ b/other.htm
@@ -274,6 +274,8 @@ Conferences</a></h3>
 Health Economics conference, June 21, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - LACEA Health Economics Network
+Keynote, September 8, 2021<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Universit&eacute;
 Pharmaceutiques, Paris, September 24, 2021 <br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
