--- a/contact.htm
+++ b/contact.htm
@@ -62,8 +62,14 @@ Research Fellow</p>
 of the <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://appliedeconometrics.org/about/fellows" target="_blank">International
 Association of Applied Econometrics</a></p>
-<span style="font-family: Calibri;"></span>
-<br>
+<p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
+ style="font-family: Calibri;">&nbsp;</span>Fellow
+of the <a style="text-decoration: none; color: rgb(0, 0, 0);"
+ href="https://www.eeassoc.org/fellows" target="_blank">European
+Economic
+Association</a></p>
+<span style="font-family: Calibri;"></span><br>
 <span style="font-family: Calibri;"></span>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;<span
