--- a/other.htm
+++ b/other.htm
@@ -269,15 +269,14 @@ Conferences</a></h3>
  name="Forthcoming">Forthcoming</a>
 :</p>
 <span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - American Society of
-Health Economics conference, June 21, 2021<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - LACEA Health Economics Network
 Keynote, September 8, 2021<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Universit&eacute;
-Pharmaceutiques, Paris, September 24, 2021 <br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; </span><span style="font-family: Calibri;">-
+University of Lyon, GATE, October 11, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO seminar, Wharton, University of
 Pennsylvania, November 10, 2021</span><br>
@@ -290,17 +289,22 @@ Pennsylvania, November 10, 2021</span><br>
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.<span
  style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><!--[endif]--><span
- style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;&nbsp;
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - American Society of
+Health Economics conference, June 21, 2021<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;- TSE Common Good Summit, May 28,
 2021</span></p>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;</span><span style="font-family: Calibri;">-
+&nbsp;&nbsp; &nbsp;&nbsp;</span><span style="font-family: Calibri;">-
 CREST Paris, May 5, 2021<br>
-</span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-&nbsp; <span style="font-family: Calibri;"></span><span
+</span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;" lang="EN-US">- University of
 Massachusetts, Amherst, April 9, 2021</span></p>
 <p class="MsoNormal"
@@ -354,22 +358,10 @@ IO Virtual Seminar, September 30, 2020<br>
  style="font-family: Calibri;" lang="EN-US"></span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"> World
 Congress of the Econometric Society, August 21 2020</span></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"></span><span
- style="font-family: Calibri;" lang="EN-US">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Keynote Lecture, LACEA Health
-Economics Network in Latin America, Lima,
-Peru, May 18-19, 2020 (postponed to 2021)</span><span
- style="font-family: Calibri;">&nbsp;</span></p>
-<p
- style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;- University of Wisconsin, Madison, April 15, 2020
 (postponed)</span><br style="font-family: Calibri;">
-<span style="font-family: Calibri;" lang="EN-US"></span><span
- style="font-family: Calibri;" lang="EN-US"></span><span
- style="font-family: Calibri;"></span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
