--- a/other.htm
+++ b/other.htm
@@ -270,16 +270,19 @@ Conferences</a></h3>
 :</p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - LACEA Health Economics Network
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -
+LACEA Health Economics Network
 Keynote, September 8, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; </span><span style="font-family: Calibri;">-
 University of Lyon, GATE, October 11, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO seminar, Wharton, University of
-Pennsylvania, November 10, 2021</span><br>
+Pennsylvania, November 10, 2021<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
+seminar, Uniersitat Pompeu Fabra, March 23, 2022<br>
+</span>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">Past :
@@ -290,7 +293,10 @@ Pennsylvania, November 10, 2021</span><br>
  style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><!--[endif]--><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - American Society of
 Health Economics conference, June 21, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
@@ -1337,6 +1343,9 @@ IO, Health, Digital Economy</li>
 Health</li>
   <li>Gokce Gokkoca, IO and Health</li>
   <li>L&eacute;a Bignon, IO and Health</li>
+  <li>Xin Zhang, IO<span
+ style="font-size: 12pt; font-family: &quot;Times New Roman&quot;,&quot;serif&quot;;"><br>
+    </span></li>
 </ul>
 <hr style="font-family: Calibri;">
 <p
