--- a/other.htm
+++ b/other.htm
@@ -270,10 +270,16 @@ Conferences</a></h3>
 :</p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
+ style="color: rgb(51, 51, 51); font-family: Opensans,Verdana,Geneva,Tahoma,sans-serif; font-size: 15px; font-style: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(255, 254, 252); display: inline ! important; float: none;"></span><span
  style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -
+International Workshop on Quantifying the impact of food and lifestyle
+policies, Rimini, Italy, September 7, 2021<br>
+</span><span style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; -
 LACEA Health Economics Network
 Keynote, September 8, 2021<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; </span><span style="font-family: Calibri;">-
 University of Lyon, GATE, October 11, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
