--- a/other.htm
+++ b/other.htm
@@ -271,10 +271,9 @@ Conferences</a></h3>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="color: rgb(51, 51, 51); font-family: Opensans,Verdana,Geneva,Tahoma,sans-serif; font-size: 15px; font-style: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(255, 254, 252); display: inline ! important; float: none;"></span><span
- style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -
-International Workshop on Quantifying the impact of food and lifestyle
-policies, Rimini, Italy, September 7, 2021<br>
-</span><span style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;
 &nbsp; -
 LACEA Health Economics Network
 Keynote, September 8, 2021<br>
@@ -291,23 +290,37 @@ seminar, Uniersitat Pompeu Fabra, March 23, 2022<br>
 </span>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">Past :
-</span>
+ style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.<span
- style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><!--[endif]--><span
+ style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;"></span></span></span><span
+ style="font-family: Calibri;">&nbsp; </span><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -
+International Workshop on Quantifying the impact of food and lifestyle
+policies, Rimini, Italy, September 7, 2021<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;-
+Field Surgery Session - Pharmaceutical Pricing, EEA</span><span
+ style="font-family: Calibri;"> ESEM</span><span
+ style="font-family: Calibri;"> Congress August 24, 2021</span><br>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style=""><span
+ style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span></span><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO^2 seminar,&nbsp;July 6, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - American Society of
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -
+American Society of
 Health Economics conference, June 21, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;- TSE Common Good Summit, May 28,
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; - TSE Common Good Summit, May 28,
 2021</span></p>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
