--- a/other.htm
+++ b/other.htm
@@ -74,6 +74,11 @@ Conferences</a></h3>
 <ul style="font-family: Calibri;">
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
+of the CEPR Virtual Industrial Organization seminar, Fall, 2021 <a
+ href="https://cepr.org/vios" target="_blank">https://cepr.org/vios</a></p>
+  </li>
+  <li>
+    <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
 of MIT-TSE
 Conference on Health Economics with Amy Finkelstein and Jean Tirole,
 MIT,&nbsp;(postponed). <a
@@ -300,7 +305,8 @@ Keynote, September 8, 2021</span></p>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; -
 International Workshop on Quantifying the impact of food and lifestyle
 policies, Rimini, Italy, September 7, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
