--- a/other.htm
+++ b/other.htm
@@ -330,7 +330,7 @@ Health Economics conference, June 21, 2021<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;">&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-&nbsp; - TSE Common Good Summit, May 28,
+&nbsp; - TSE Common Good Summit, Paris, May 28,
 2021</span></p>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
@@ -1366,8 +1366,9 @@ Data,&nbsp;defended on October 9, 2017, now Data Scientist,
 Granular,
 San
 Francisco, US</li>
-  <li>Rossi Abi-Rafeh, Empirical
-IO, Health, Digital Economy</li>
+  <li><a href="https://www.rossiabirafeh.com/" target="_blank">Rossi
+Abi-Rafeh</a>, Empirical
+IO</li>
   <li>Malgorzata Majewska, IO and
 Health</li>
   <li>Gokce Gokkoca, IO and Health</li>
