--- a/other.htm
+++ b/other.htm
@@ -286,6 +286,9 @@ University of Lyon, GATE, October 11, 2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IO seminar, Wharton, University of
 Pennsylvania, November 10, 2021<br>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - Asia-Pacific Industrial
+Organization Conference, National University of Singapore, December 14,
+2021<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - </span><span style="font-family: Calibri;">IO
 seminar, Uniersitat Pompeu Fabra, March 23, 2022<br>
